version/0.12/_sources/api/solver/_autosummary/settings/mass_flow_multiplier.rst.txt
:orphan:

.. _mass_flow_multiplier:

mass_flow_multiplier
====================

.. currentmodule:: ansys.fluent.core.solver.settings_231.mass_flow_multiplier

.. autoclass:: mass_flow_multiplier
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`child_object_type_child <child_object_type_child_1>`


.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`recirculation_inlet_child <recirculation_inlet_child>`       'child_object_type' of recirculation_inlet.

:ref:`phase_child <phase_child_21>`                                              'child_object_type' of phase.

============================================================   ===============================================

