version/0.18/_sources/api/solver/_autosummary/settings/mass_flow_multiplier.rst.txt
:orphan:

.. _mass_flow_multiplier:

mass_flow_multiplier
====================

.. autoclass:: ansys.fluent.core.solver.settings_232.mass_flow_multiplier.mass_flow_multiplier
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`child_object_type_child <child_object_type_child_1>`


.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`recirculation_inlet_child <recirculation_inlet_child>`       'child_object_type' of recirculation_inlet.

:ref:`phase_child <phase_child_21>`                                              'child_object_type' of phase.

============================================================   ===============================================

